# CodeFormer-ncnn

./: CMakeLists.txt  README.md
include/: codeformer.h  encoder.h  face.h  generator.h  model.h  pipeline.h  realesrgan.h
models/: encoder.param  generator.param  real_esrgan.param  yolov5-blazeface.param
src/: codeformer.cpp  demo.cpp  encoder.cpp  face.cpp  generator.cpp  pipeline.cpp  realesrgan.cpp
